Fix discrepancy between rendered and browser image alignment

--- a/less/easy.less
+++ b/less/easy.less
@@ -30,7 +30,7 @@
 
     .absolute {
       width: 300px;
-      left: 148px;
+      left: 158px;
       top: -8px;
     }
     .hanging-period {
