--- a/styles.css
+++ b/styles.css
@@ -211,7 +211,7 @@ body {
 }
 .easy .two .absolute {
   width: 300px;
-  left: 148px;
+  left: 158px;
   top: -8px;
 }
 .easy .two .hanging-period {
